--- a/package.json
+++ b/package.json
@@ -10,13 +10,25 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "add": "^2.0.6",
     "babel-preset-react": "^6.24.1",
+    "chromadb": "^1.5.11",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
+    "langchain": "^0.0.175",
+    "langchainhub": "^0.0.6",
     "nativewind": "^2.0.11",
+    "openai": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -25,6 +37,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2"
   },
