--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "add": "^2.0.6",
@@ -27,6 +21,7 @@
     "install": "^0.13.0",
     "langchain": "^0.0.175",
     "langchainhub": "^0.0.6",
+    "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "openai": "^4.14.1",
     "react": "18.2.0",
@@ -39,7 +34,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
