--- a/package.json
+++ b/package.json
@@ -15,23 +15,26 @@
     "add": "^2.0.6",
     "babel-preset-react": "^6.24.1",
     "chromadb": "^1.5.11",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "langchain": "^0.0.175",
     "langchainhub": "^0.0.6",
+    "link": "^2.1.0",
     "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "openai": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-autogrow-textinput": "^5.4.0",
     "react-native-localization": "^2.3.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
