--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
     "langchain": "^0.0.175",
