--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "add": "^2.0.6",
@@ -18,6 +19,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
     "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
@@ -32,6 +34,7 @@
     "react-native": "^0.72.6",
     "react-native-autogrow-textinput": "^5.4.0",
     "react-native-localization": "^2.3.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
